<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        style="@style/CalcDisplay"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:useDefaultMargins="true"
        app:rowCount="7"
        app:columnCount="5"
        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button style="@style/CalcButton" android:id="@+id/btnMC"     android:text="@string/mc" />
        <Button style="@style/CalcButton" android:id="@+id/btnMR"     android:text="@string/mr" />
        <Button style="@style/CalcButton" android:id="@+id/btnMS"     android:text="@string/ms" />
        <Button style="@style/CalcButton" android:id="@+id/btnMPlus"  android:text="@string/m_plus" />
        <Button style="@style/CalcButton" android:id="@+id/btnMMinus" android:text="@string/m_minus" />

        <Button style="@style/CalcButton" android:id="@+id/btnBack"  android:text="@string/back" />
        <Button style="@style/CalcButton" android:id="@+id/btnCE"    android:text="@string/ce" />
        <Button style="@style/CalcButton" android:id="@+id/btnC"     android:text="@string/c" />
        <Button style="@style/CalcButton" android:id="@+id/btnSign"  android:text="@string/plus_minus" />
        <Button style="@style/CalcButton" android:id="@+id/btnSqrt"  android:text="@string/sqrt" />

        <Button style="@style/CalcButton" android:id="@+id/btn7" android:text="@string/_7" />
        <Button style="@style/CalcButton" android:id="@+id/btn8" android:text="@string/_8" />
        <Button style="@style/CalcButton" android:id="@+id/btn9" android:text="@string/_9" />
        <Button style="@style/CalcButton" android:id="@+id/btnDiv" android:text="@string/div" />
        <Button style="@style/CalcButton" android:id="@+id/btnPerc" android:text="@string/perc" />

        <Button style="@style/CalcButton" android:id="@+id/btn4" android:text="@string/_4" />
        <Button style="@style/CalcButton" android:id="@+id/btn5" android:text="@string/_5" />
        <Button style="@style/CalcButton" android:id="@+id/btn6" android:text="@string/_6" />
        <Button style="@style/CalcButton" android:id="@+id/btnMul" android:text="@string/mul" />
        <Button style="@style/CalcButton" android:id="@+id/btnInv" android:text="@string/inv" />

        <Button style="@style/CalcButton" android:id="@+id/btn1"    android:text="@string/_1" />
        <Button style="@style/CalcButton" android:id="@+id/btn2"    android:text="@string/_2" />
        <Button style="@style/CalcButton" android:id="@+id/btn3"    android:text="@string/_3" />
        <Button style="@style/CalcButton" android:id="@+id/btnPlus" android:text="@string/plus" />
        <Button style="@style/CalcButton"
            android:id="@+id/btnEq"
            android:text="@string/equals"
            app:layout_rowSpan="2" />

        <Button style="@style/CalcButton" android:id="@+id/btn0"
            android:text="@string/_0"
            app:layout_columnSpan="2" />
        <Button style="@style/CalcButton" android:id="@+id/btnDot"   android:text="@string/dot" />
        <Button style="@style/CalcButton" android:id="@+id/btnMinus" android:text="@string/minus" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
